<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Titles and ActionBar Titles -->
    <string name="title_app_name">Guelph Transit</string>
    <string name="title_schedules_bus">Bus Schedules</string>
    <string name="title_schedules_stop">Stop Schedules</string>

    <!-- Temporary String Holders -->
    <string name="temp_map_page">Map View</string>
    <string name="temp_sched_route_id">Route 11:</string>
    <string name="temp_sched_route_name">Victoria St Rec Centre</string>
    <string name="temp_sched_stop_id">Stop 0954:</string>
    <string name="temp_sched_stop_name">Westwood Rd at Silvercreek Pkwy.</string>
    <string name="temp_sched_coords">-41.234, 83.0394</string>
    <string name="temp_sched_time">12:01:12</string>
    <string name="temp_list_stop_id">0954</string>
    <string name="temp_list_route_id">12</string>

    <!-- Static Layout Strings -->
    <string name="current_time">Current Time: </string>
    <string name="week_times">Week Day Times</string>
    <string name="sat_times">Saturday Times</string>
    <string name="sun_times">Sunday Times</string>

    <!-- Image Descriptions -->
    <string name="bus_icon_desc">Icon showing a bus</string>
    <string name="bus_list_icon">PNG Icon to symbolize buses</string>
    <string name="home_icon">PNG Icon of a Home Icon</string>
    <string name="fav_icon">PNG Icon of a Favorites Icon</string>
    <string name="loc_icon">PNG Icon of a Location Icon</string>

    <!-- Menu Items -->
    <string name="action_settings">Settings</string>
    <string name="action_schedule">Schedules</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_clear_favorites">Clear Favorites</string>
    <string name="action_update_schedules">Update Schedules</string>
    <string name="action_toggle_autoupdate">Toggle Auto-Updater</string>
    <string name="action_toggle_driver_mode">Toggle Driver Mode</string>
    <string name="title_activity_pop_up_window">PopUpWindow</string>
    <string name="hello_world">Hello world!</string>

    <!-- Alert Dialog Items -->
    <string name="title_auto_update">Auto-Update Check</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="title_activity_login">LoginActivity</string>

</resources>
