<!--Author: Nic Durish-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".main.MainActivity">

    <item android:id="@+id/action_schedule"
        android:title="@string/action_schedule"
        app:showAsAction="never"/>

    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        app:showAsAction="never"/>

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never">

        <menu>
            <item
                android:id="@+id/action_clear_favorites"
                android:title="@string/action_clear_favorites"/>

            <item
                android:id="@+id/action_update_schedules"
                android:title="@string/action_update_schedules"/>

            <item
                android:id="@+id/action_toggle_autoupdate"
                android:title="@string/action_toggle_autoupdate"/>
        </menu>

    </item>

    <item android:id="@+id/action_help"
        android:title="@string/action_help"
        app:showAsAction="never"/>
</menu>
