<?xml version="1.0" encoding="utf-8"?>

<!--Author: Nic Durish-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/info_panel"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:baselineAligned="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1">

            <TextView
                android:id="@+id/route_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp_sched_route_id"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/route_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp_sched_route_name"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/stop_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp_sched_stop_id"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="15sp"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:paddingTop="20dp"/>

            <TextView
                android:id="@+id/stop_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp_sched_stop_name"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:gravity="center"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

        <fragment
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.5"
            android:id="@+id/mapStop"
            android:name="com.google.android.gms.maps.SupportMapFragment"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/current_clock"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:gravity="center"
        android:layout_below="@+id/info_panel"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_time"
            android:textSize="13sp"
            />

        <TextView
            android:id="@+id/clock_current"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp_sched_time"
            android:textSize="13sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/time_titles"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/current_clock"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:padding="5dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/week_times"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:gravity="center"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/time_titles"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:baselineAligned="false"
        android:paddingLeft="100dp"
        android:paddingRight="100dp">

            <ListView
                android:id="@+id/stop_times_exp_list"
                android:background="@drawable/rounded_corners_light"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:padding="5dp"
                android:scrollbars="none"
                android:listSelector="@android:color/transparent"
                android:cacheColorHint="@android:color/transparent">
            </ListView>
    </LinearLayout>

</RelativeLayout>