<?xml version="1.0" encoding="utf-8"?>

<!--Author: Nic Durish-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bus_bar_icon"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:minHeight="?android:attr/listPreferredItemHeight">

    <ImageView
        android:layout_width="?android:attr/listPreferredItemHeight"
        android:layout_height="match_parent"
        android:id="@+id/busImage"
        android:src="@drawable/bus_symbol"
        android:clickable="true"
        android:paddingBottom="5dp"
        android:contentDescription="@string/bus_list_icon"
        android:tint="@color/sched_icon_colour"/>

    <TextView
        android:layout_width="?android:attr/listPreferredItemHeight"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/temp_list_route_id"
        android:textColor="@color/sched_id_colour"
        android:id="@+id/bus_id"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/busImage"
        android:layout_toEndOf="@+id/busImage"
        android:layout_alignBottom="@+id/busImage"
        android:paddingLeft= "0dp"
        android:paddingRight= "10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/temp_sched_route_name"
        android:textColor="@color/sched_name_colour"
        android:id="@+id/bus_route"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/bus_id"
        android:layout_alignBottom="@+id/bus_id"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="false"
        android:paddingLeft= "0dp"
        android:paddingRight="10dp"/>

</RelativeLayout>