<?xml version="1.0" encoding="utf-8"?>

<!--Author: Nic Durish-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.MainActivity"
    tools:ignore="MergeRootFrame" >

    <fragment
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_above="@+id/linearLayout" />
    />

    <ListView
        android:id="@+id/legend"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="false"
        android:layout_alignParentRight="true"
        android:gravity="start"
        android:layout_above="@+id/linearLayout"
        android:layout_marginLeft="0sp"
        android:layout_marginStart="0sp"

        android:layout_marginRight="250sp"
        android:layout_marginEnd="250sp"

        android:layout_marginTop="275sp"
        android:layout_marginBottom="30sp"
        />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:background="@color/butbar_background_colour"
        android:gravity="center"
        android:layout_above="@+id/bot_bar_frag_view"
        android:baselineAligned="false"
        >

        <FrameLayout
            android:id="@+id/button_home"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@color/butbar_background_colour"
            android:onClick="buttonClick"
            >
            <ImageView
                android:id="@+id/button_image_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/home_icon"
                android:src="@drawable/home_icon"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"/>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/button_favorites"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@color/butbar_background_colour"
            android:onClick="buttonClick"
            >
            <ImageView
                android:id="@+id/button_image_fav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/fav_icon"
                android:src="@drawable/favorite_icon"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"/>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/button_location"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@color/butbar_background_colour"
            android:onClick="buttonClick"
            >
            <ImageView
                android:id="@+id/button_image_loc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/loc_icon"
                android:src="@drawable/location_icon"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"/>
        </FrameLayout>


    </LinearLayout>

    <FrameLayout
        tools:layout="@layout/fragment_busbar"
        android:id="@+id/bot_bar_frag_view"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/botbar_background_colour"
        android:layout_alignParentBottom="true"
        />


</RelativeLayout>